Changes for 3.0.6rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.0.5

3.0.5rc2 was released as 3.0.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.5rc2

Bug fixes:
..F....... [ZBX-11220] fixed visibility of latest event in Monitoring->Events page (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.5rc1

New features:
.......PS. [ZBXNEXT-3106] improved concurrent VMware item polling speed, reduced size of cached VMware data (wiper)
..F....... [ZBX-11136] increased width of input fields (Sasha)
A.F....... [ZBX-1357] updated Chinese (China), French, German, Korean, Persian translations; thanks to Zabbix translators (zalex_ua)
...G...... [ZBXNEXT-3389] removed value length limitation in zabbix_sender when reading data from file/stream (wiper)

Bug fixes:
........S. [ZBX-11204] fixed parameter parsing in calculated items when it contains double quote escaping (Sergejs)
.......PS. [ZBX-5448] fixed possible delay when proxy sends cached history to server (vso)
.......PS. [ZBX-7595] fixed long SNMP OID not being accepted (vso)
....I..... [ZBX-7108] fixed error when upgrading graph_theme table in proxy database from 1.8 to 2.0 (vso)
..F....... [ZBX-9068] fixed forms behaviour when enter key is pressed (Sasha)
...G...PS. [ZBX-11245] fixed escaped double quote parsing in quoted parameters in array in item key parameters (gleb)
....I..... [ZBX-11175] fixed compilation failure for OpenBSD 5.8, 5.9, 6.0 (vso)
..F....... [ZBX-11137] fixed validation of new host group when creating/updating template (Gunars)
A.F....... [ZBX-11151] implemented dynamic default sortorder for graph item, default sortorder increases by one with each entry of graph item (Cemeris)
..F....... [ZBX-8897] increased performance of Monitoring->Events page (Sasha)