@@ -3,6 +3,7 @@ Changes for 3.0.6rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.5
@@ -1499,6 +1500,7 @@ Changes for 2.2.16rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.15
